# cc-poke

./: LICENSE  README.md  README.zh-CN.md  config.example.json  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
assets/: approval-page.html
deploy/: cc-poke-daemon.service
docs/superpowers/plans/: 2026-06-21-phase1-notifier.md  2026-06-23-phase2-approval.md
docs/superpowers/specs/: 2026-06-18-cc-poke-design.md  2026-06-23-cc-poke-phase2-approval.md
hooks/: notification-settings.example.json  pretooluse-settings.example.json
spike/: .gitignore  README.md  hook-settings.json  hook_probe.py  mcp-config.json  mcp_probe.py  run-interactive-hook-probe.sh  run-interactive-probe.sh
src/cc_poke/: __init__.py  approve.py  config.py  daemon.py  notifier.py  setup_wizard.py  stopper.py  store.py
src/cc_poke/adapters/: __init__.py  bark.py  base.py  ntfy.py
tests/: test_approve.py  test_bark_adapter.py  test_config.py  test_daemon.py  test_entrypoints.py  test_notifier.py  test_ntfy_adapter.py  test_setup_wizard.py  test_stopper.py  test_store.py
